--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,15 @@
   margin: 0;
 }
 
-.header {
-  position: fixed;
+:root {
+  --white-color: #fff;
+  --tomato: #ff5733;
 }
 
 .navbar {
   height: 40px;
   background-color: rgb(14, 14, 58);
-  color: white;
+  color: var(--white-color);
   padding-top: 20px;
 }
 
@@ -30,16 +31,20 @@
   margin-right: 30px;
 }
 
-.navbar ul li:hover {
+.navbar a {
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.navbar .link-bottom:hover {
   cursor: pointer;
-  border-bottom: 3px solid tomato;
- 
+  border-bottom: 3px solid var(--tomato);
 }
 
 .navbar-two {
   height: 70px;
   background-color: rgb(25, 25, 70);
-  color: white;
+  color: var(--white-color);
 }
 
 .skills-head {
@@ -65,9 +70,6 @@
   width: 130px;
   background-color: rgb(25, 25, 70);
   padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 20px;
   border: 3px solid rgb(88, 88, 146);
 }
@@ -82,12 +84,9 @@
   width: 130px;
   background-color: rgb(197, 53, 53);
   padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 20px;
   border: none;
-  color: white;
+  color: var(--white-color);
 }
 
 .free-btn:hover {
@@ -111,7 +110,7 @@
 
 .card-text {
   padding: 50px;
-  color: white;
+  color: var(--white-color);
 }
 
 .card-text h4,
@@ -146,13 +145,13 @@ button {
 .popular {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  color: white;
+  color: var(--white-color);
   padding: 50px;
 }
 .popular .topics {
   padding: 10px;
 }
-.topics a{
+.topics a {
   display: inline-block;
   margin-top: 20px;
 }
@@ -164,12 +163,13 @@ button {
 .languages .languages-div div {
   margin-right: 40px;
   border-radius: 10px;
-  transition: 1000ms bottom;
+  transition: 1000s bottom;
 }
 
 .languages .languages-div div:hover {
   position: relative;
-  bottom: 22px;
+  bottom: 10px;
+  border: 2px solid var(--tomato);
 }
 
 .small-cards {
@@ -178,15 +178,15 @@ button {
   gap: 10px;
 }
 
-.play-card ,
+.play-card,
 .million-card,
 .customers-card,
 .percent-card {
-   width: 260px;
-   height: 150px;
-   background-color: white;
-   padding: 20px;
-   border-radius: 20px;
+  width: 260px;
+  height: 150px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .play-card img,
@@ -195,13 +195,6 @@ button {
 .percent-card img {
   width: 50px;
   height: 50px;
-}
-
-.play-card p,
-.million-card p,
-.customers-card p,
-.percent-card p {
-font-size: 25px;
 }
 
 .section-brands {
@@ -213,7 +206,7 @@ font-size: 25px;
 }
 .brands {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 .brands img {
   height: 40px;
@@ -221,24 +214,21 @@ font-size: 25px;
   margin-top: 20px;
 }
 
-
 .upskill {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .upskill-left h1 {
-  font-size:40px ;
+  font-size: 40px;
 }
 
-.learn-btn{
+.learn-btn {
   background-color: white;
   border-radius: 20px;
   width: 150px;
   border: 1px solid black;
-
 }
-
 
 .upskill img {
   width: 90%;
@@ -248,7 +238,161 @@ font-size: 25px;
   display: flex;
 }
 
-.upskill-left  a{
-  color: tomato;
-   margin-left: 20px;
+.upskill-left a {
+  color: var(--tomato);
+  margin-left: 20px;
+}
+
+.investment {
+  background-color: rgb(25, 25, 70);
+  color: var(--white-color);
+  padding: 50px;
+  text-align: center;
+}
+
+.percentages {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  padding: 50px;
+}
+
+.percentages img {
+  width: 200px;
+}
+
+.percentages p {
+  font-size: 20px;
+}
+
+.returns h1 {
+  font-size: 40px;
+}
+
+.returns p {
+  color: rgb(199, 199, 199);
+}
+
+.customers-case {
+  background-color: #f7f7f7;
+}
+.customers {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-top: 7rem;
+}
+.stories a,
+.fujitsu-card a,
+.maritz-card a {
+  display: inline-block;
+  color: var(--tomato);
+}
+.stories h3 {
+  color: var(--tomato);
+}
+
+.stories h2,
+.stories h4,
+.fujitsu-card h4,
+.maritz-card h4,
+.stories div,
+.fujitsu-card div,
+.maritz-card div,
+.stories a,
+.fujitsu-card a,
+.maritz-card a {
+  padding-top: 30px;
+}
+
+.stories,
+.fujitsu-card,
+.maritz-card {
+  width: 250px;
+  padding: 40px;
+  border-radius: 20px;
+}
+.fujitsu-card img,
+.maritz-card img {
+  width: 150px;
+}
+
+.fujitsu-card,
+.maritz-card {
+  background-color: rgb(255, 255, 255);
+}
+.exp-img img {
+  width: 95%;
+}
+.experience h1 {
+  margin-top: 5rem;
+}
+.skill-case {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-bottom: 5rem;
+}
+
+.experience-list ul li {
+  padding: 10px;
+  border-bottom: 1px solid gray;
+  color: rgb(41, 48, 45);
+}
+
+.experience-list ul li:hover {
+  background-color: rgb(209, 204, 196);
+}
+
+.experience-list ul li a {
+  display: flex;
+  justify-content: space-between;
+}
+
+.experience h1 {
+  font-size: 35px;
+}
+
+.for-courses {
+  background-color: rgb(25, 25, 70);
+  color: white;
+}
+.course-case {
+  padding-top: 10rem;
+}
+
+.code-course {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+.code-course img {
+  width: 90%;
+}
+.code-course .master div {
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.free-courses {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+}
+.free-courses a {
+  color: rgb(253, 74, 134);
+}
+
+.free-courses a::after {
+  content: ">";
+  position: relative;
+  top: 2px;
+}
+
+.free-courses a:hover {
+}
+
+.free-courses a:hover {
+  margin-right: 10px;
+  transition: 1s all;
 }
