--- a/css/utilties.css
+++ b/css/utilties.css
@@ -1,38 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@800&display=swap");
 
-.font-bitter{
-    font-family: "Bitter",sans-serif;
+.font-bitter {
+  font-family: "Bitter", sans-serif;
 }
 
 .container {
-    max-width: 1400px;
-    margin:0 auto;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-.flex  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.d-flex {
-    display: flex;
-}
-
-
-.inline-flex {
-      display: inline-flex;
+.flex {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.d-flex {
+  display: flex;
+}
 
-.list-p{
-    padding: 10px;
+.inline-flex {
+    display: inline-flex;
+}
+.space-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.list-p {
+  padding: 10px;
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .card-element p {
@@ -40,17 +41,15 @@
   color: blue;
 }
 
-
-.p-font{
-    font-family: sans-serif;
+.p-font {
+  font-family: sans-serif;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .flex-between {
-    display: inline-flex;
-    justify-content: space-between;
+  display: inline-flex;
+  justify-content: space-between;
 }
-
