--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,73 @@ button {
   color: #ff335f;
 }
 
+.chat-case {
+ background: linear-gradient(85deg, rgb(123, 3, 192), rgb(1, 1, 83));
+ color: var(--white-color);
+}
+
+.contact-case {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  padding-top: 10rem;
+}
+
+.contact-case form label {
+  display: block;
+}
+
+.ask-case p{
+ font-size:20px;
+}
+.ask-case h1 {
+  font-size: 50px;
+}
+
+.form-case {
+  border-radius: 30px;
+
+}
+.form-case div {
+  padding-top: 1rem;
+}
+
+
+.contact-case input[type="text"],select {
+  width: 100%;
+  height: 30px;
+   background-color: rgb(37, 37, 112);
+   border: none;
+   margin-top: 20px;
+   outline: none;
+  
+}
+
+select {
+  color: var(--white-color);
+}
+
+.form-case {
+  width: 70%;
+  background-color: rgb(14, 14, 58);
+  padding: 3rem ;
+  margin-bottom: 6rem;
+}
+
+.form-case input[type="checkbox"] {
+  width: 14px;
+}
+.checkboxes {
+  display: flex;
+  align-items: center;
+  padding-top: 0px;
+}
+.inputs a {
+  color: var(--tomato);
+}
+.inputs button {
+  margin: 20px;
+}
+
 @media (max-width: 576px) {
   .navbar {
     font-size: x-small;
@@ -630,7 +697,8 @@ button {
   .small-cards,
   .code-course,
   .platform-cards,
-  .plans-cards {
+  .plans-cards,
+  .contact-case {
     grid-template-columns: repeat(1, 1fr);
   }
 
@@ -664,4 +732,11 @@ button {
   .indiviual-team {
     width: 250px;
   }
+  .contact-case {
+    padding-top: 2rem;
+    justify-content: center;
+  }
+  .ask-case h1 {
+  font-size: 34px;
+}
 }
