--- a/css/styles.css
+++ b/css/styles.css
@@ -29,15 +29,14 @@
   width: 100px;
 }
 
-
 .navbar ul li {
   margin-right: 30px;
 }
 .navbar-two img {
   height: 30px;
- width:100px
-};  
-.plural-head  ul li a {
+  width: 100px;
+}
+.plural-head .link-bottom {
   text-decoration: none;
   color: var(--white-color);
 }
@@ -701,7 +700,7 @@ footer {
   .plural-head {
     justify-content: center;
   }
-  .skills-head  ul li {
+  .skills-head ul li {
     font-size: 7px;
     margin-right: 12px;
   }
@@ -812,7 +811,7 @@ footer {
   }
   .footer-end {
     display: grid;
-    grid-template-columns: repeat(1,1fr);
-    padding:20px 20px;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 20px 20px;
   }
 }
