--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,10 @@ button {
   margin-top: 20px;
 }
 
+.languages-logo ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 .languages-logo ul li {
   margin-right: 30px;
   transition: bottom 2s;
@@ -181,7 +185,6 @@ button {
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   justify-content: center;
-  width: 60%;
 }
 
 .play-card,
@@ -191,6 +194,7 @@ button {
   background-color: white;
   border-radius: 20px;
   padding: 20px;
+  
 }
 
 .card-element {
@@ -482,38 +486,24 @@ button {
 }
 
 .plans {
-  padding: 5rem 0;
-}
-
-.indiviual-team {
-  width: 400px;
-  height: 42px;
-  background-color: rgb(14, 14, 58);
-  border-radius: 20px;
-  border: 1px solid rgb(62, 71, 122);
-}
-
-.indiviual-team {
-  align-items: center;
+  padding: 5rem;
 }
 
 .plans-cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  justify-content: center;
-  color: black;
-  padding: 1rem 8rem;
+  grid-template-columns: repeat(3, 300px);
   gap: 10px;
+  justify-content: center;
 }
 
 .starter,
 .professional,
 .enterprise {
   background-color: white;
-  padding: 24px 30px;
+  padding: 2px 10px;
   border-radius: 30px;
-  width: 250px;
+  color: black;
+  max-width: 300px;
 }
 
 .starter h1,
@@ -556,8 +546,6 @@ button {
 .contact-case {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  justify-content: center;
-
   padding-top: 10rem;
   gap: 20px;
 }
@@ -591,7 +579,6 @@ select {
 }
 
 .form-case {
-  width: 70%;
   background-color: rgb(14, 14, 58);
   padding: 3rem;
   margin-bottom: 6rem;
@@ -656,6 +643,10 @@ footer {
   color: var(--white-color);
   padding: 50px 0;
 }
+.footer-image {
+  display: flex;
+  align-items: center;
+}
 
 .footer-header h6 {
   margin-right: 22px;
@@ -677,19 +668,16 @@ footer {
   outline: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .navbar {
     font-size: x-small;
   }
-
   .navbar ul li {
     margin-right: 5px;
   }
   .navbar-two {
     height: 80px;
   }
-
- 
   .skills-head ul li {
     font-size: 7px;
     margin-right: 7px;
@@ -723,18 +711,11 @@ footer {
     font-size: x-small;
   }
 
-  .languages-logo ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
   .languages-logo ul li {
-    margin: 33px 0;
+    margin: 33px;
   }
 
-  .small-cards {
-    grid-template-columns: repeat(2, 1fr);
-    padding-bottom: 2rem;
-  }
+  
   .popular {
     padding: 10px;
   }
@@ -756,13 +737,21 @@ footer {
   .skill-case,
   .upskill,
   .percentages,
-  .small-cards,
   .code-course,
   .platform-cards,
-  .plans-cards,
-  .contact-case,
   .footer-case {
     grid-template-columns: repeat(1, 1fr);
+  }
+.small-cards {
+    grid-template-columns: repeat(2, 200px);
+    padding-bottom: 2rem;
+  }
+  .contact-case {
+       grid-template-columns: repeat(1,500px);
+       justify-content: center;
+  }
+  .plans-cards {
+    grid-template-columns: repeat(1,300px);
   }
 
   .code-course {
@@ -787,17 +776,8 @@ footer {
   .platform-cards {
     padding: 20px;
   }
-
   .plans img {
     width: 40%;
-  }
-
-  .indiviual-team {
-    width: 250px;
-  }
-
-  .contact-case {
-    padding: 3rem 3rem;
   }
   .ask-case h1 {
     font-size: 34px;
@@ -807,8 +787,12 @@ footer {
     grid-template-columns: repeat(1, 1fr);
     padding: 20px 20px;
   }
+  .footer-image {
+    padding-bottom: 12px;
+  }
 
   .newsletter {
     max-width: 400px;
   }
+
 }
